--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.wooconvo-admin-wrapper {
+/* .wooconvo-admin-wrapper {
   min-height: 30vh;
   width: 80%;
   border: 1px solid;
   margin: 0 auto;
-}
+} */
