orders details loading done for vendor and customre

--- a/src/components/orderthread/thread.css
+++ b/src/components/orderthread/thread.css
@@ -35,3 +35,12 @@
     margin: 0;
     text-align: center;
 }
+.preview-thumb-img-upload {
+    object-fit: contain;
+}
+
+.preview-thumb-tool-upload {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
