--- a/src/components/orderthread/thread.css
+++ b/src/components/orderthread/thread.css
@@ -17,11 +17,14 @@
 .preview-thumb {
     background: #fff;
     border-radius: 20px;
-    display: inline-block;
     margin: 1rem;
     position: relative;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     text-align: center;
+    display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 }
 
 .preview-thumb-img {
